sandbox/output
StringCalculator.java:10: error: missing return statement
    }
    ^
1 error
